# rust-opengl-triangle

./: .editorconfig  Cargo.toml  README.md
bindings/: Cargo.toml  build.rs
bindings/src/: lib.rs  shader.rs
shaders/: triangle.frag
src/: build.rs  event_processor.rs  key_processor.rs  main.rs  triangle.rs
