[package]
name = "simple-opengl-application"
version = "0.1.0"
authors = ["nekkan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
glutin = "0.25.1"
gl = "0.14.0"
phf = { version = "0.8.0", features = ["macros"] }
bindings = { path = "./bindings" }

[workspace]
members = ["bindings"]
