[package]
name = "simple-opengl-game"
version = "0.1.0"
authors = ["nekkan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
glutin = "0.25.1"
gl = "0.14.0"
bindings = { path = "./bindings" }

[workspace]
members = ["bindings"]
